--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
     </section> </main> 
 
       <footer> 
-        <p>&copy; 2024 [Your Name]</p> 
+        <a href="https://www.facebook.com">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSo7FyccXoWmLRVLDSQOY4aOiU6azUqqVkJoA&s" alt="facebook"></a>
+        <a href="https://www.instagram.com">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTjLr-YSdW2iqiXQsFihL0FQsSibC1ISUZrUA&s" alt="insta"></a>
       </footer> 
   </body> 
 </html>
