--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
     </section> </main> 
 
       <footer> 
+        <div class="social-media">
         <a href="https://www.facebook.com">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSo7FyccXoWmLRVLDSQOY4aOiU6azUqqVkJoA&s" alt="facebook"></a>
         <a href="https://www.instagram.com">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTjLr-YSdW2iqiXQsFihL0FQsSibC1ISUZrUA&s" alt="insta"></a>
+        </div>
       </footer> 
   </body> 
 </html>
