--- a/form.html
+++ b/form.html
@@ -18,7 +18,7 @@
         
         <main> <section class="form"> 
             <h1>RSVP for the Party</h1> 
-<!--             <form action="submit_rsvp.php" method="post">  -->
+            <form> <!--  action="submit_rsvp.php" method="post"  -->
                 <label for="name">Name:</label> 
                 <input type="text" id="name" name="name" required> 
                 <label for="email">Email:</label> 
