--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
       <img src="https://media3.giphy.com/media/5zde0xR0aN25mjsSJr/giphy.gif?cid=6c09b9527w4ch53qvd6qy2axfmketjd33kyc3lxbik4v0oni&ep
       =v1_internal_gif_by_id&rid=giphy.gif&ct=g" width="300px" height="250px" alt="gif"> 
       <h1>Welcome to My Birthday Party!</h1> 
-      <p>Hello! I'm [Your Name] and I'm excited to invite you to my birthday party.
+      <p>Hello! I'm Mariam and I'm excited to invite you to my birthday party.
         Come celebrate with me and let's make some unforgettable memories!</p>  
       <p style="color: orangered"><b>Date: 20-June-2024 | Time: 4PM | Location: 123 Galt, ON-N1D 1C3</b></p>
       <p>Please check the Gallery page for gifting ideas and don't forget to RSVP </p>
     </section> </main> 
 
       <footer> 
-        <p>&copy; 2024 [Your Name]</p> 
+        <p>&copy; 2024 Mariam</p> 
       </footer> 
   </body> 
 </html>
