--- a/form.html
+++ b/form.html
@@ -33,7 +33,7 @@
         </section> </main> 
    
         <footer> 
-            <p>&copy; 2024 [Your Name]</p> 
+            <p>&copy; 2024 Mariam</p> 
         </footer> 
     </body> 
 </html>
