--- a/gallery.html
+++ b/gallery.html
@@ -102,7 +102,7 @@
         </section> </main>
          
         <footer> 
-            <p>&copy; 2024 [Your Name]</p> 
+            <p>&copy; 2024 Mariam</p> 
         </footer> 
     </body> 
     </html>
